--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@
     -webkit-backdrop-filter: blur(5px);
     border: 1px solid rgba(255, 255, 255, 0.3);
     height: 30rem;
-    width: 40rem;
+    width: 40%;
 
 }
 
