--- a/css/style.css
+++ b/css/style.css
@@ -139,8 +139,7 @@ input:focus {
   align-items: center;
   flex-direction: column;
   visibility: visible;
-  width: 100%;
-  padding: 1rem;
+  padding-block: 1rem;
   transition: 0.8s;
   color: #1f1f1f;
   background-color: #f1f1f1;
