--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,7 @@ input:focus {
   outline: 0;
 }
 
-.paragrafo-resultado {
+.result {
   font-weight: 700;
   font-size: 2.4rem;
   color: rgb(0, 0, 0);
@@ -144,13 +144,13 @@ input:focus {
   color: #1f1f1f;
   background-color: #f1f1f1;
 }
-.img-peso {
+.icon{
   display: flex;
   background-color: transparent;
   height: 3rem;
   margin-right: 0.4rem;
 }
-.area-peso {
+.weight-input{
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -173,13 +173,12 @@ input:focus {
 }
 #errorDialog {
   display: flex;
-  width: 0%;
+  /* width: 0%; */
   font-size: 1.6rem;
   background-color: rgb(255, 176, 176);
   border-radius: 1rem;
 }
 #errorDialog.ativo {
-  width: 100%;
   padding: 1rem;
 }
 @media (max-width: 580px) {
