--- a/css/style.css
+++ b/css/style.css
@@ -92,12 +92,14 @@ body {
   cursor: pointer;
   color: #1f1f1f;
   background-color: #f1f1f1;
+  box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.493);
   width: 100%;
 }
 
 .button-calc:hover {
   transition: 0.5s;
   filter: brightness(0.8);
+  box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.068);
 }
 form {
   display: flex;
@@ -144,13 +146,13 @@ input:focus {
   color: #1f1f1f;
   background-color: #f1f1f1;
 }
-.icon{
+.icon {
   display: flex;
   background-color: transparent;
   height: 3rem;
   margin-right: 0.4rem;
 }
-.weight-input{
+.weight-input {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -171,11 +173,24 @@ input:focus {
   background-color: rgb(255, 176, 176);
   border-radius: 1rem;
 }
+#thinness {
+  background-color: rgb(255, 176, 176);
+}
+#normal {
+  background-color: rgb(189, 255, 176);
+}
+#overweight {
+  background-color: rgb(255, 176, 176);
+}
+#obesity {
+  background-color: rgb(255, 94, 94);
+}
 #errorDialog {
   display: flex;
-  /* width: 0%; */
+  color: #f1f1f1;
   font-size: 1.6rem;
-  background-color: rgb(255, 176, 176);
+  background-color: rgb(255, 64, 64);
+  box-shadow: 0px 0px 50px rgb(255, 64, 64);
   border-radius: 1rem;
 }
 #errorDialog.ativo {
