--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,17 @@
   text-decoration: none;
   font-family: "Lato", sans-serif;
 }
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
 :root {
   font-size: 62.5%;
   scroll-behavior: smooth;
@@ -33,6 +44,7 @@ body {
   align-items: center;
   justify-content: center;
   padding: 4rem;
+  width: 500px;
   border-radius: 16px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   border: 1px solid rgba(255, 255, 255, 0.3);
@@ -130,7 +142,7 @@ input:focus {
 .block-footer {
   display: flex;
   visibility: hidden;
-  width: 0%;
+  gap: 1rem;
   margin-top: 1rem;
   border-radius: 0.7rem;
   background-color: rgba(255, 255, 255, 0);
@@ -141,7 +153,8 @@ input:focus {
   align-items: center;
   flex-direction: column;
   visibility: visible;
-  padding-block: 1rem;
+  width: 100%;
+  padding-block-start: 1rem;
   transition: 0.8s;
   color: #1f1f1f;
   background-color: #f1f1f1;
@@ -152,7 +165,7 @@ input:focus {
   height: 3rem;
   margin-right: 0.4rem;
 }
-.weight-input {
+.container-input {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -167,34 +180,54 @@ input:focus {
   font-size: 1.6rem;
 }
 #faixaImc {
-  margin-left: 0.1rem;
-  padding: 1rem;
+  color: #f1f1f1;
+  width: 100%;
+  padding-block: 1.3rem;
   font-size: 1.6rem;
+  border-radius: 0.7rem;
+  text-align: center;
+}
+.thinness {
   background-color: rgb(255, 176, 176);
-  border-radius: 1rem;
+  box-shadow: 0px 15px 30px rgba(255, 176, 176, 0.781);
+  transition: 0.8s;
 }
-#thinness {
+.normal {
+  background-color: rgb(60, 168, 69);
+  box-shadow: 0px 15px 30px rgba(60, 168, 69, 0.719);
+  transition: 0.8s;
+}
+.overweight {
   background-color: rgb(255, 176, 176);
+  box-shadow: 0px 15px 30px rgba(255, 176, 176, 0.836);
+  transition: 0.8s;
 }
-#normal {
-  background-color: rgb(189, 255, 176);
-}
-#overweight {
-  background-color: rgb(255, 176, 176);
-}
-#obesity {
-  background-color: rgb(255, 94, 94);
+.obesity {
+  background: rgb(255, 94, 94);
+  box-shadow: 0px 15px 30px rgba(255, 94, 94, 0.712);
+  transition: 0.8s;
 }
 #errorDialog {
-  display: flex;
+  visibility: hidden;
+  position: absolute;
+  justify-self: center;
+  align-self: center;
+  opacity: 0;
+  bottom: 0rem;
+  padding: 1rem;
   color: #f1f1f1;
   font-size: 1.6rem;
   background-color: rgb(255, 64, 64);
   box-shadow: 0px 0px 50px rgb(255, 64, 64);
   border-radius: 1rem;
+  transition: 0.8s;
 }
 #errorDialog.ativo {
-  padding: 1rem;
+  display: flex;
+  visibility: visible;
+  opacity: 100%;
+  bottom: 5rem;
+  transition: 0.8s;
 }
 @media (max-width: 580px) {
   .main-layout {
@@ -215,5 +248,8 @@ input:focus {
   }
   .block-footer {
     width: 80%;
+  }
+  #errorDialog {
+    margin-bottom: 10rem;
   }
 }
